--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "dont-care-log",
-  "version": "0.0.2",
-  "description": "make git stage ignore specific log code line",
+  "version": "0.0.3",
+  "description": "teach git stage/diff how to ignore specific logging code",
   "main": "index.js",
   "repository": "zthxxx/dont-care-log",
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
   "scripts": {
-    "preinstall": "npm run set:include && npm run set:attributes",
+    "postinstall": "npm run set:include && npm run set:attributes",
     "preuninstall": "npm run unset:include && npm run unset:attributes",
     "set:include": "git config --local include.path ../node_modules/dont-care-log/src/.gitconfig",
-    "set:attributes": "ln -fs ../../node_modules/dont-care-log/src/.gitattributes `git rev-parse --git-common-dir`/info/attributes",
+    "set:attributes": "ln -fs ../../node_modules/dont-care-log/src/.gitattributes `git rev-parse --git-dir`/info/attributes",
     "unset:include": "git config --local --unset include.path",
     "unset:attributes": "npm run judge-link:attr && npm run remove:attributes",
-    "judge-link:attr": "[[ -L `git rev-parse --git-common-dir`/info/attributes ]]",
-    "remove:attributes": "rm `git rev-parse --git-common-dir`/info/attributes"
+    "judge-link:attr": "[ -L \"`git rev-parse --git-dir`/info/attributes\" ]",
+    "remove:attributes": "rm `git rev-parse --git-dir`/info/attributes"
   },
   "keywords": [
     "git",
