--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,24 @@ cache:
 git:
   depth: false
 
-env:
-  ZSH=${HOME}/.oh-my-zsh
 
 before_install:
   - mkdir -p node_modules/dont-care-log/
   - cp -Rf ./src node_modules/dont-care-log/
 
+script:
+  - npm run build
+
 deploy:
+  - provider: pages
+    local_dir: public
+    skip_cleanup: true
+    keep_history: true
+    github_token: ${GIT_REPO_TOKEN}
+    target_branch: gh-pages
+    on:
+      branch: master
+
   - provider: npm
     skip_cleanup: true
     email: "${NPM_USER_EMAIL}"
