--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dont-care-log",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "teach git stage/diff how to ignore specific logging code",
   "main": "index.js",
   "repository": "zthxxx/dont-care-log",
@@ -8,6 +8,9 @@
     "registry": "https://registry.npmjs.org"
   },
   "scripts": {
+    "docs": "eloc open intro.md -i 'images/**'",
+    "build": "npm run build:site",
+    "build:site": "eloc build intro.md -i '{CNAME,images/**}'",
     "postinstall": "npm run set:include && npm run set:attributes",
     "preuninstall": "npm run unset:include && npm run unset:attributes",
     "set:include": "git config --local include.path ../node_modules/dont-care-log/src/.gitconfig",
@@ -50,6 +53,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "eloc": "^1.1.12",
     "husky": "^3.0.9"
   }
 }
