--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dont-care-log",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "teach git stage/diff how to ignore specific logging code",
   "main": "index.js",
   "repository": "zthxxx/dont-care-log",
@@ -9,8 +9,12 @@
   },
   "scripts": {
     "docs": "eloc open intro.md -i 'images/**'",
+    "test": "npm run show:diff; npm run assert:drop",
+    "benchmark": "cd tests && bash benchmark.sh --all",
     "build": "npm run build:site",
     "build:site": "eloc build intro.md -i '{CNAME,images/**}'",
+    "show:diff": "cat tests/testfile.js | diff tests/base.js -; exit 0",
+    "assert:drop": "node index.js tests/testfile.js | diff tests/base.js -",
     "postinstall": "npm run set:include && npm run set:attributes",
     "preuninstall": "npm run unset:include && npm run unset:attributes",
     "set:include": "git config --local include.path ../node_modules/dont-care-log/src/.gitconfig",
@@ -22,6 +26,7 @@
   },
   "keywords": [
     "git",
+    "diff",
     "ignore",
     "log",
     "console.log"
