chore: add optional verbose log in install

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dont-care-log",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "teach git stage/diff how to ignore specific logging code",
   "main": "index.js",
   "repository": "zthxxx/dont-care-log",
@@ -15,10 +15,14 @@
     "build:site": "eloc build intro.md -i '{CNAME,images/**}'",
     "show:diff": "cat tests/testfile.js | diff tests/base.js -; exit 0",
     "assert:drop": "node index.js tests/testfile.js | diff tests/base.js -",
-    "postinstall": "npm run set:include && npm run set:attributes",
-    "preuninstall": "npm run unset:include && npm run unset:attributes",
+    "postinstall": "npm run show:verbose; npm run set:include && npm run set:attributes",
+    "preuninstall": "npm run show:verbose; npm run unset:include && npm run unset:attributes",
+    "show:verbose": "if [ \"$SHOW_VERBOSE\" = true ]; then npm run show:npmconf && npm run show:pwd; fi",
+    "show:npmconf": "env | grep -i npm_config",
+    "show:pwd": "pwd",
+    "git-dir": "mkdir -p `git rev-parse --git-dir`/info",
     "set:include": "git config --local include.path ../node_modules/dont-care-log/src/.gitconfig",
-    "set:attributes": "ln -fs ../../node_modules/dont-care-log/src/.gitattributes `git rev-parse --git-dir`/info/attributes",
+    "set:attributes": "npm run git-dir && ln -fs ../../node_modules/dont-care-log/src/.gitattributes `git rev-parse --git-dir`/info/attributes",
     "unset:include": "git config --local --unset include.path",
     "unset:attributes": "npm run judge-link:attr && npm run remove:attributes",
     "judge-link:attr": "[ -L \"`git rev-parse --git-dir`/info/attributes\" ]",
